[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["Sonder-MX"]
license = ""
repository = ""
default-run = "app"
edition = "2021"


[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = [] }
nanoid = "0.4.0"
rusqlite = { version = "0.29.0", features = ["bundled", "chrono"] }
chrono = { version = "0.4.24", features = ["serde"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
